syntax = "proto3";

service BambooAccessAPI {
  rpc SendTransaction(SendTransactionRequest) returns (SendTransactionResponse);
  rpc GetBlockByHash(GetBlockByHashRequest) returns (GetBlockByHashResponse);
  rpc GetBlockByNumber(GetBlockByNumberRequest) returns (GetBlockByNumberResponse);
  rpc GetLatestBlock(GetLatestBlockRequest) returns (GetLatestBlockResponse);
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc CallContract(CallContractRequest) returns (CallContractResponse);
}

message SendTransactionRequest {
  message Transaction {
    bytes data = 1;
    uint64 nonce = 2;
    bytes payerSignature = 3;
  }
  Transaction transaction = 1;
}

message SendTransactionResponse {
  bytes hash = 1;
}

message Block {
  enum Status {
    PENDING = 0;
    SEALED = 1;
  }
  bytes hash = 1;
  uint64 number = 2;
  repeated bytes transactionHashes = 3;
  Status status = 4;
}

message GetBlockByHashRequest {
  bytes hash = 1;
}

message GetBlockByHashResponse {
  Block block = 1;
}

message GetBlockByNumberRequest {
  bytes number = 1;
}

message GetBlockByNumberResponse {
  Block block = 1;
}

message GetLatestBlockRequest {
  bool isSealed = 1;
}

message GetLatestBlockResponse {
  Block block = 1;
}

message GetTransactionRequest {
  bytes hash = 1;
}

message GetTransactionResponse {
  message Transaction {
    enum Status {
      PENDING = 0;
      IN_BLOCK = 1;
      SEALED = 2;
    }
    bytes data = 1;
    uint64 nonce = 2;
    bytes payerSignature = 3;
    Status status = 4;
  }
  Transaction transaction = 1;
}

message GetBalanceRequest {
  bytes address = 1;
}

message GetBalanceResponse {
  bytes value = 1;
}

message CallContractRequest {
  bytes data = 1;
}

message CallContractResponse {
  bytes data = 2;
}
